--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "proxy": "http://localhost:3002",
+  "proxy":"https://bshopsync.vercel.app",
   "name": "shopsync",
   "version": "0.1.0",
   "private": true,
